sidebar-expand-on-hover/chrome.css
/* ... */
/*
=======================================

Experimental Features

=======================================
*/

/* Collapsed sidebar */
#navigator-toolbox:not(
    [zen-has-hover],
    [movingtab],
    [flash-popup],
    [has-popup-menu],
    :has(.tabbrowser-tab:active),
    :has(toolbarbutton[open="true"]:not(#zen-sidepanel-button), #urlbar[open]),
    /* When creating a workspace */
    :has(#TabsToolbar-customization-target > zen-workspace-creation),
    /* When a folder label is being edited */
    :has(.tab-label-container-editing),
    :has(#TabsToolbar[open="true"]) /* When edit theme picker is open */
) {
    /* Align sidebar foot buttons vertically in columns when pref is set*/
    @media (-moz-bool-pref: "theme.sidebar_expand_on_hover.align_buttons") {
        #zen-sidebar-foot-buttons {
            flex-direction: column-reverse !important;
            justify-content: center !important;

            > #zen-create-new-button {
                display: none !important;
            }

            @media not (-moz-bool-pref: "theme.sidebar_expand_on_hover.hide_workspace_indicator") {
                > #zen-workspaces-button {
                    display: none !important;
                }
            }
        }
    }

    .zen-current-workspace-indicator {
        display: flex !important;
        justify-content: flex-start !important;
        margin-left: 2px !important;
        min-width: 100% !important; /* Make workspace icon display at full size */

        /* Hide every element inside by default */
        > * {
            display: none !important;
        }
        /* When there is a workspace icon, display the icon */
        > .zen-current-workspace-indicator-icon:not([no-icon]) {
            display: block !important;
        }
        /* When there is NO workspace icons, display the name */
        > .zen-current-workspace-indicator-icon:is([no-icon])
            ~ .zen-current-workspace-indicator-name {
            display: block !important;
        }
    }

    /* Override and hide workspace indicator when pref is set */
    @media (-moz-bool-pref: "theme.sidebar_expand_on_hover.hide_workspace_indicator") {
        .zen-current-workspace-indicator {
            display: none !important;
        }
    }

    zen-folder {
        @media (-moz-pref("theme.sidebar_expand_on_hover.collapsed_folder_style", "side_border")) {
            /* For Sine Mod */
            background: linear-gradient(
                to right,
                #ffffff60 10%,
                transparent 10%
            ) !important;
            background-position: left;
        }
        @media (-moz-pref: "theme.sidebar_expand_on_hover.collapsed_folder_style", "side_border") {
            /* For Zen Mod */
            background: linear-gradient(
                to right,
                #ffffff50 10%,
                transparent 10%
            ) !important;
            background-position: left;
        }
    }

    .tab-group-container > zen-folder:nth-of-type(1n) {
        /*all nested folders*/
        margin-left: 8px !important; /*limit margin*/
        @media (-moz-pref("theme.sidebar_expand_on_hover.collapsed_folder_style", "side_border")) {
            /* For Sine Mod */
            background: linear-gradient(
                to right,
                #ffffff60 10%,
                transparent 10%
            ) !important;
            background-position: left;
        }
        @media (-moz-pref: "theme.sidebar_expand_on_hover.collapsed_folder_style", "side_border") {
            /* For Zen Mod */
            background: linear-gradient(
                to right,
                #ffffff60 10%,
                transparent 10%
            ) !important;
            background-position: left;
        }
    }

    .tab-group-container {
        margin-left: -8px !important; /* limit margin*/ /* is negative of the other value */

        /* Override limit margin for Inverted tabs to 0px*/
        @media (-moz-bool-pref("theme.sidebar_expand_on_hover.inverted_tabs")) {
            /* For Sine Mod */
            margin-right: 0px !important; /*limit margin*/
        }
        @media (-moz-bool-pref: "theme.sidebar_expand_on_hover.inverted_tabs") {
            /* For Zen Mod */
            margin-right: 0px !important; /*limit margin*/
        }
    }

    /* MEDIA CONTROLS */

    #zen-media-controls-hbox > #zen-media-focus-button {
        display: block !important; /* Display the active playing tab's icon */
    }

    --zen-toolbox-padding: calc(
        var(--zen-element-separation) / 2 + 1px
    ) !important;

    /* Hide Ancestor Elements (on collapsed sidebar) */
    /* - On collapsed sidebar checker */
    --theme-sidebar_expand_on_hover-if_collapsed_display_none: none;
}
/* ... */

